references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/Relationship_invalid_relatedElement1.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:0c3c256ee7dc590051f1d09a307eb13a3c09fd222007b5063a152c884435ed30
size 1884
